--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
 	"description": "QuarkPHP is a PHP framework",
 	"keywords": ["framework"],
 	"license": "BSD-3-Clause",
+	"version": "1.0.0",
 	"authors": [
 		{
 			"name": "dxvgef",
