添加命名空间

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,12 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"QuarkPHP\\": "src/"
+            "QuarkPHP\\Dispatcher": "src/Dispatcher",
+			"QuarkPHP\\Base": "src/Base",
+            "QuarkPHP\\Logger": "src/Logger",
+            "QuarkPHP\\Connect": "src/Connect",
+            "QuarkPHP\\Upload": "src/Upload",
+            "QuarkPHP\\VerifyCode": "src/VerifyCode"
 		}
 	}
 }
